Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -803,29 +803,30 @@ sidebarLinks.forEach(link => {
       price: 0,
       category: "bolsos",
       images: [
-        "https://res.cloudinary.com/dh1qqui2h/image/upload/v1753495175/PSX_20250725_221321_rtz0p5.jpg"
+        "https://res.cloudinary.com/dh1qqui2h/image/upload/v1754698221/file_00000000c18461f69a7562a9daf05292_rwhlxe.png"
       ],
-      description: "Bolso deportivo con amplio espacio, ideal para tus actividades diarias o viajes cortos. Fabricado con materiales resistentes y diseño moderno, perfecto para llevar tu ropa, zapatillas y accesorios de forma organizada. Disponible en varios colores, este bolso es el compañero ideal para el gimnasio o una escapada de fin de semana. ¡Compra tu bolso deportivo Escencia hoy!"
+      description: "Bolso deportivo con amplio espacio, ideal para tus actividades diarias o viajes cortos. Fabricado con materiales resistentes y diseño moderno, perfecto para llevar tu ropa, zapatillas y accesorios de forma organizada. Disponible en varios colores, este bolso es el compañero ideal para el gimnasio o una escapada de fin de semana. 
+Cuenta con bolsillo separador de calzado y ropa sucia o húmeda"
     },
     {
       id: 2,
-      name: "Mochila Escence",
+      name: "Mochila Escencia",
       price: 0,
       category: "mochilas",
       images: [
         "https://res.cloudinary.com/dh1qqui2h/image/upload/v1753495176/PSX_20250725_214029_w7qr5k.jpg"
       ],
-      description: "Mochila multifuncional, perfecta para organizar todo lo de tu bebé. Incluye compartimentos térmicos para mamaderas, un cambiador plegable y múltiples bolsillos internos y externos para pañales, toallitas y juguetes. Su diseño ergonómico la hace cómoda de llevar para los padres modernos. ¡La mejor mochila para mamás con estilo!"
+      description: "Mochila multifuncional, perfecta para organizar todo lo de tu dia a dia!"
     },
     {
       id: 3,
-      name: "Morral Escence Pro",
+      name: "Morral Escencia Pro",
       price: 0,
       category: "morrales",
       images: [
         "https://res.cloudinary.com/dh1qqui2h/image/upload/v1753495175/PSX_20250725_221147_bu33rj.jpg"
       ],
-      description: "Morral profesional Escence Pro con diseño elegante y compartimento acolchado para laptop de hasta 15 pulgadas. Ideal para el trabajo, la universidad o viajes de negocios, ofreciendo estilo y funcionalidad. Cuenta con varios bolsillos internos para accesorios, documentos y un bolsillo de acceso rápido para el teléfono. ¡El morral perfecto para profesionales!"
+      description: "Morral profesional Escence Pro con diseño elegante y compartimento acolchado. Ideal para el trabajo, la universidad o viajes de negocios, ofreciendo estilo y funcionalidad. Cuenta con varios bolsillos internos para accesorios, documentos y un bolsillo de acceso rápido para el teléfono. ¡El morral perfecto para profesionales!"
     }
   ];
 
