--- a/index.html
+++ b/index.html
@@ -795,38 +795,37 @@ sidebarLinks.forEach(link => {
   });
 });
 
-  // --- Tu script original de ecommerce comienza aquí ---
+// --- Tu script original de ecommerce comienza aquí ---
   const products = [
     {
       id: 1,
       name: "Bolso Deportivo Escence",
-      price: 35000,
+      price: 19900, // Precio de ejemplo
       category: "bolsos",
       images: [
         "https://res.cloudinary.com/dh1qqui2h/image/upload/v1754698221/file_00000000c18461f69a7562a9daf05292_rwhlxe.png"
       ],
-      description: "Bolso deportivo con amplio espacio, ideal para tus actividades diarias o viajes cortos. Fabricado con materiales resistentes y diseño moderno, perfecto para llevar tu ropa, zapatillas y accesorios de forma organizada. Disponible en varios colores, este bolso es el compañero ideal para el gimnasio o una escapada de fin de semana. 
-Cuenta con bolsillo separador de calzado y ropa sucia o húmeda"
+      description: "Bolso deportivo con amplio espacio, ideal para tus actividades diarias o viajes cortos. Fabricado con materiales resistentes y diseño moderno, perfecto para llevar tu ropa, zapatillas y accesorios de forma organizada. Disponible en varios colores, este bolso es el compañero ideal para el gimnasio o una escapada de fin de semana. Cuenta con bolsillo separador de calzado y ropa sucia o húmeda"
     },
     {
       id: 2,
       name: "Mochila Escencia",
-      price: 0,
+      price: 23500, // Precio de ejemplo
       category: "mochilas",
       images: [
         "https://res.cloudinary.com/dh1qqui2h/image/upload/v1753495176/PSX_20250725_214029_w7qr5k.jpg"
       ],
-      description: "Mochila multifuncional, perfecta para organizar todo lo de tu dia a dia!"
+      description: "Mochila multifuncional, perfecta para organizar todo lo de tu día a día!"
     },
     {
       id: 3,
       name: "Morral Escencia Pro",
-      price: 0,
+      price: 0, // Aquí mostramos "Consultar"
       category: "morrales",
       images: [
         "https://res.cloudinary.com/dh1qqui2h/image/upload/v1753495175/PSX_20250725_221147_bu33rj.jpg"
       ],
-      description: "Morral profesional Escence Pro con diseño elegante y compartimento acolchado. Ideal para el trabajo, la universidad o viajes de negocios, ofreciendo estilo y funcionalidad. Cuenta con varios bolsillos internos para accesorios, documentos y un bolsillo de acceso rápido para el teléfono. ¡El morral perfecto para profesionales!"
+      description: "Morral profesional Escencia Pro con diseño elegante y compartimento acolchado. Ideal para el trabajo, la universidad o viajes de negocios, ofreciendo estilo y funcionalidad. Cuenta con varios bolsillos internos para accesorios, documentos y un bolsillo de acceso rápido para el teléfono. ¡El morral perfecto para profesionales!"
     }
   ];
 
