--- a/index.html
+++ b/index.html
@@ -3,24 +3,24 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Escencia Tienda Oficial | Bolsos, Mochilas y Morrales de Diseño - Córdoba, Argentina</title>
-  <meta name="description" content="Descubre Escencia, la tienda oficial de bolsos, mochilas y morrales de diseño en Córdoba, Argentina. Productos únicos con historia y propósito. ¡Envío a todo el país!">
-  <meta name="keywords" content="bolsos, mochilas, morrales, tienda online, diseño, moda, accesorios, Argentina, Córdoba, Escencia, carteras, maternal, deportivo, profesional">
-  <meta name="author" content="Escencia Tienda">
+  <title>GOOL Cosquin | Tienda Deportiva - Córdoba, Argentina</title>
+  <meta name="description" content="Descubre GOOL, la tienda de indumentaria, calzado y accesorios deportivos. ¡Envío a todo el país!">
+  <meta name="keywords" content="botines, camisetas, bolsos, mochilas, buzos, pelotas, canilleras, camperas">
+  <meta name="author" content="GOOL Cosquin">
   <meta name="robots" content="index, follow">
 
-  <meta property="og:title" content="Escencia Tienda Oficial | Bolsos, Mochilas y Morrales de Diseño">
-  <meta property="og:description" content="Descubre Escencia, la tienda oficial de bolsos, mochilas y morrales. Productos únicos con historia y propósito.">
-  <meta property="og:image" content="https://res.cloudinary.com/dh1qqui2h/image/upload/v1752831494/Logo_original_m0nqzp.png">
+  <meta property="og:title" content="GOOL, tienda de indumentaria, calzado y accesorios deportivos.">
+  <meta property="og:description" content="Descubre GOOL, la tienda de indumentaria, calzado y accesorios deportivos. ¡Envío a todo el país!"">
+  <meta property="og:image" content="https://res.cloudinary.com/dh1qqui2h/image/upload/v1753118840/nuevo_banner_iglkub.png">
   <meta property="og:url" content="https://escencia.netlify.app/">
   <meta property="og:type" content="website">
 
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Escencia Tienda Oficial | Bolsos, Mochilas y Morrales">
+  <meta name="twitter:title" content="GOOL Tienda Oficial | Bolsos, Mochilas y Morrales">
   <meta name="twitter:description" content="Descubre Escencia, la tienda oficial de bolsos, mochilas y morrales de diseño en Córdoba, Argentina. Productos únicos con historia y propósito.">
-  <meta name="twitter:image" content="https://res.cloudinary.com/dh1qqui2h/image/upload/v1752831494/Logo_original_m0nqzp.png">
+  <meta name="twitter:image" content="https://res.cloudinary.com/dh1qqui2h/image/upload/v1753118840/nuevo_banner_iglkub.png">
 
-  <link rel="icon" type="image/png" href="https://res.cloudinary.com/dh1qqui2h/image/upload/v1752831494/Logo_original_m0nqzp.png">
+  <link rel="icon" type="image/png" href="https://res.cloudinary.com/dh1qqui2h/image/upload/v1753118840/nuevo_banner_iglkub.png">
   <style>
     html {
       scroll-behavior: smooth;
@@ -652,7 +652,7 @@
 
 <header>
   <h1 style="position:absolute; left:-9999px; width:1px; height:1px; overflow:hidden;">Escencia Tienda Oficial - Bolsos, Mochilas y Morrales de Diseño en Córdoba, Argentina</h1>
-  <img src="https://res.cloudinary.com/dh1qqui2h/image/upload/v1753118840/nuevo_banner_iglkub.png" alt="Logo de Escencia, tienda de bolsos, mochilas y morrales artesanales">
+  <img src="https://res.cloudinary.com/dntysdacx/image/upload/v1753919101/Captura_de_pantalla_2025-07-26_114338_ftwwi8.png" alt="Logo de Escencia, tienda de bolsos, mochilas y morrales artesanales">
 </header>
 <style>
   /* Estilo para destacar el enlace "Menú" */
@@ -686,31 +686,29 @@
 
 <section id="quienes">
   <h2>¿Quiénes somos?</h2>
-  <p>ESCENCIA nació de dos hermanas unidas por una historia difícil, pero aún más por la fuerza de no rendirse. Crecimos en una infancia dura, donde cada paso fue una batalla… pero juntas aprendimos a transformar el dolor en impulso, y la lucha en creación.</p>
-  <p>Creamos esta marca como reflejo de lo que somos: mujeres que no se olvidan de su origen, que caminan con el corazón en alto, y que llevan consigo todo lo que realmente importa.</p>
-  <p>Cada bolso, cada mochila que diseñamos, tiene algo de nosotras. No son solo productos: son fragmentos de un camino recorrido con coraje, amor y propósito.</p>
-  <p>Escencia es eso: lo esencial, lo verdadero, lo que queda cuando todo lo demás se cae.</p>
-  <p>Gracias por estar acá. Gracias por llevar con vos un pedacito de nuestra historia.</p>
+  <p>Somos GOOL Cosquin, acá vas a encontrar todo lo relacionado al deporte mas popular del mundo, el fútbol! Tenemos Camisetas, Pelotas, Botines, Accesorios y muchas cosas mas!!</p>
 </section>
 
 <section id="productos">
-  <h2 style="text-align:center; font-size:2.2em; margin-bottom:40px; color:#333;">Catálogo Escencia</h2>
+  <h2 style="text-align:center; font-size:2.2em; margin-bottom:40px; color:#333;">Catálogo</h2>
   <div class="category-filters" id="categoryFilters">
       <div class="desktop-filters">
           <button class="active" onclick="filterProducts('all', this)">Todos los Productos</button>
           <div class="category-buttons-row">
-              <button onclick="filterProducts('bolsos', this)">Bolsos</button>
-              <button onclick="filterProducts('mochilas', this)">Mochilas</button>
-              <button onclick="filterProducts('morrales', this)">Morrales</button>
+              <button onclick="filterProducts('camisetas', this)">Camisetas</button>
+              <button onclick="filterProducts('pantalones', this)">Pantalones</button>
+              <button onclick="filterProducts('shorts', this)">Shorts</button>
+	      <button onclick="filterProducts('botines', this)">Botines</button>
           </div>
       </div>
       <div class="mobile-filters">
           <label for="mobileCategorySelect" style="display: none;">Selecciona una categoría:</label>
           <select id="mobileCategorySelect" onchange="filterProducts(this.value, this)">
               <option value="all">Todos los Productos</option>
-              <option value="bolsos">Bolsos</option>
-              <option value="mochilas">Mochilas</option>
-              <option value="morrales">Morrales</option>
+              <option value="camisetas">Camisetas</option>
+              <option value="Pantalones">Pantalones</option>
+              <option value="shorts">Shorts</option>
+	      <option value="botines">Botines</option>
           </select>
       </div>
   </div>
@@ -718,9 +716,9 @@
 </section>
 
 <section id="contacto">
-  <h2>Contacto Escencia</h2>
-  <p>📱 WhatsApp: <a href="https://wa.me/5493541529201" target="_blank" rel="noopener noreferrer">Envíanos un WhatsApp: +5493541 294944</a></p>
-  <p>📧 Email: <span>escencia@tienda.com</span></p>
+  <h2>Contacto</h2>
+  <p>📱 WhatsApp: <a href="https://wa.me/5493541529201" target="_blank" rel="noopener noreferrer">Envíanos un WhatsApp: +5493541 707888</a></p>
+  <p>📧 Email: <span>goolcoquin@gmail.com</span></p>
   <p>📍 Cosquín, Córdoba, Argentina</p>
   <p>¡Contáctanos para tus consultas sobre nuestros productos!</p>
 </section>
@@ -733,7 +731,7 @@
 <div class="modal" id="cartModal">
   <div class="modal-content">
     <button class="close-modal" onclick="toggleCart()">x</button>
-    <h2>Tu carrito de compras en Escencia</h2>
+    <h2>Tu carrito de compras</h2>
     <div id="cartItems"></div>
     <p style="font-weight: bold; font-size: 20px; text-align: right; margin-top: 20px;">Total: $<span id="modalTotal">0</span></p>
     <button class="clear-cart-button" onclick="clearCart()">Vaciar Carrito</button>
@@ -795,37 +793,37 @@ sidebarLinks.forEach(link => {
   });
 });
 
-// --- Tu script original de ecommerce comienza aquí ---
+  // --- Tu script original de ecommerce comienza aquí ---
   const products = [
     {
       id: 1,
-      name: "Bolso Deportivo Escence",
-      price: 19900, // Precio de ejemplo
+      name: "Bolso Escencia Deportivo",
+      price: 19900,
       category: "bolsos",
       images: [
-        "https://res.cloudinary.com/dh1qqui2h/image/upload/v1754698221/file_00000000c18461f69a7562a9daf05292_rwhlxe.png"
+        "https://res.cloudinary.com/dh1qqui2h/image/upload/v1753495175/PSX_20250725_221321_rtz0p5.jpg"
       ],
-      description: "Bolso deportivo con amplio espacio, ideal para tus actividades diarias o viajes cortos. Fabricado con materiales resistentes y diseño moderno, perfecto para llevar tu ropa, zapatillas y accesorios de forma organizada. Disponible en varios colores, este bolso es el compañero ideal para el gimnasio o una escapada de fin de semana. Cuenta con bolsillo separador de calzado y ropa sucia o húmeda"
+      description: "Bolso deportivo Escencia, ideal para tu dia a dia, el fiel compañero para el club o para el gym"
     },
     {
       id: 2,
-      name: "Mochila Escencia",
-      price: 23500, // Precio de ejemplo
+      name: "Mochila Escence",
+      price: 0,
       category: "mochilas",
       images: [
         "https://res.cloudinary.com/dh1qqui2h/image/upload/v1753495176/PSX_20250725_214029_w7qr5k.jpg"
       ],
-      description: "Mochila multifuncional, perfecta para organizar todo lo de tu día a día!"
+      description: "Mochila multifuncional, perfecta para organizar todo lo de tu bebé. Incluye compartimentos térmicos para mamaderas, un cambiador plegable y múltiples bolsillos internos y externos para pañales, toallitas y juguetes. Su diseño ergonómico la hace cómoda de llevar para los padres modernos. ¡La mejor mochila para mamás con estilo!"
     },
     {
       id: 3,
-      name: "Morral Escencia Pro",
-      price: 0, // Aquí mostramos "Consultar"
+      name: "Morral Escence Pro",
+      price: 0,
       category: "morrales",
       images: [
         "https://res.cloudinary.com/dh1qqui2h/image/upload/v1753495175/PSX_20250725_221147_bu33rj.jpg"
       ],
-      description: "Morral profesional Escencia Pro con diseño elegante y compartimento acolchado. Ideal para el trabajo, la universidad o viajes de negocios, ofreciendo estilo y funcionalidad. Cuenta con varios bolsillos internos para accesorios, documentos y un bolsillo de acceso rápido para el teléfono. ¡El morral perfecto para profesionales!"
+      description: "Morral profesional Escence Pro con diseño elegante y compartimento acolchado para laptop de hasta 15 pulgadas. Ideal para el trabajo, la universidad o viajes de negocios, ofreciendo estilo y funcionalidad. Cuenta con varios bolsillos internos para accesorios, documentos y un bolsillo de acceso rápido para el teléfono. ¡El morral perfecto para profesionales!"
     }
   ];
 
@@ -884,7 +882,7 @@ sidebarLinks.forEach(link => {
     const cartItemsDiv = document.getElementById('cartItems');
     cartItemsDiv.innerHTML = '';
     if (cart.length === 0) {
-        cartItemsDiv.innerHTML = '<p style="text-align: center; color: #888;">El carrito de Escencia está vacío. ¡Agrega tus productos favoritos!</p>';
+        cartItemsDiv.innerHTML = '<p style="text-align: center; color: #888;">El carrito de compras está vacío. ¡Agrega tus productos favoritos!</p>';
     } else {
         cart.forEach((item, index) => {
             cartItemsDiv.innerHTML += `
@@ -925,7 +923,7 @@ sidebarLinks.forEach(link => {
   }
 
   function clearCart() {
-      if (confirm('¿Estás seguro de que quieres vaciar tu carrito de compras de Escencia?')) {
+      if (confirm('¿Estás seguro de que quieres vaciar tu carrito de compras?')) {
           cart = [];
           updateCartDisplay();
       }
@@ -938,7 +936,7 @@ sidebarLinks.forEach(link => {
 
   function showAddToCartMessage(productName) {
     const messageDiv = document.getElementById('addToCartMessage');
-    messageDiv.textContent = `"${productName}" añadido al carrito de Escencia.`;
+    messageDiv.textContent = `"${productName}" añadido al carrito.`;
     messageDiv.classList.add('show');
     setTimeout(() => {
         messageDiv.classList.remove('show');
@@ -947,10 +945,10 @@ sidebarLinks.forEach(link => {
 
   function sendWhatsApp() {
     if (cart.length === 0) {
-      alert("El carrito de Escencia está vacío. Agrega productos antes de confirmar tu pedido.");
+      alert("El carrito está vacío. Agrega productos antes de confirmar tu pedido.");
       return;
     }
-    let message = "Hola! Quiero confirmar el siguiente pedido de Escencia:\n\n";
+    let message = "Hola! Quiero confirmar el siguiente pedido:\n\n";
     cart.forEach(p => {
       message += `• ${p.name} x ${p.quantity} - $${(p.price * p.quantity).toLocaleString('es-AR')}\n`;
     });
@@ -968,7 +966,7 @@ sidebarLinks.forEach(link => {
       const thumbnailGallery = document.getElementById('thumbnailGallery');
       thumbnailGallery.innerHTML = '';
       detailImage.src = product.images[0];
-      detailImage.alt = `Imagen principal de ${product.name} de Escencia`;
+      detailImage.alt = `Imagen principal de ${product.name}`;
       product.images.forEach((imgSrc, index) => {
           const thumb = document.createElement('img');
           thumb.src = imgSrc;
