--- a/index.html
+++ b/index.html
@@ -652,7 +652,7 @@
 
 <header>
   <h1 style="position:absolute; left:-9999px; width:1px; height:1px; overflow:hidden;">Escencia Tienda Oficial - Bolsos, Mochilas y Morrales de Diseño en Córdoba, Argentina</h1>
-  <img src="https://res.cloudinary.com/dntysdacx/image/upload/v1753919101/Captura_de_pantalla_2025-07-26_114338_ftwwi8.png" alt="Logo de Escencia, tienda de bolsos, mochilas y morrales artesanales">
+  <img src="https://res.cloudinary.com/dh1qqui2h/image/upload/v1753118840/nuevo_banner_iglkub.png" alt="Logo de Escencia, tienda de bolsos, mochilas y morrales artesanales">
 </header>
 <style>
   /* Estilo para destacar el enlace "Menú" */
@@ -686,7 +686,7 @@
 
 <section id="quienes">
   <h2>¿Quiénes somos?</h2>
-  <p>Somos GOOL Cosquin, acá vas a encontrar todo lo relacionado al deporte mas popular del mundo, el fútbol! Tenemos Camisetas, Pelotas, Botines, Accesorios y muchas cosas mas!!</p>
+  <p></p>
 </section>
 
 <section id="productos">
@@ -695,20 +695,18 @@
       <div class="desktop-filters">
           <button class="active" onclick="filterProducts('all', this)">Todos los Productos</button>
           <div class="category-buttons-row">
-              <button onclick="filterProducts('camisetas', this)">Camisetas</button>
-              <button onclick="filterProducts('pantalones', this)">Pantalones</button>
-              <button onclick="filterProducts('shorts', this)">Shorts</button>
-	      <button onclick="filterProducts('botines', this)">Botines</button>
+              <button onclick="filterProducts('bolsos', this)">Bolsos</button>
+              <button onclick="filterProducts('mochilas', this)">Mochilas</button>
+              <button onclick="filterProducts('morrales', this)">Morrales</button>
           </div>
       </div>
       <div class="mobile-filters">
           <label for="mobileCategorySelect" style="display: none;">Selecciona una categoría:</label>
           <select id="mobileCategorySelect" onchange="filterProducts(this.value, this)">
               <option value="all">Todos los Productos</option>
-              <option value="camisetas">Camisetas</option>
-              <option value="Pantalones">Pantalones</option>
-              <option value="shorts">Shorts</option>
-	      <option value="botines">Botines</option>
+              <option value="camisetas">Bolsos</option>
+              <option value="Pantalones">Mochilas</option>
+              <option value="shorts">Morrales</option>
           </select>
       </div>
   </div>
