--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>GOOL Cosquin | Tienda Deportiva - Córdoba, Argentina</title>
-  <meta name="description" content="Descubre GOOL, la tienda de indumentaria, calzado y accesorios deportivos. ¡Envío a todo el país!">
+  <meta name="description" content="Descubre Escencia, Bolsos, Morchilas y Morrales ¡Envío a todo el país!">
   <meta name="keywords" content="botines, camisetas, bolsos, mochilas, buzos, pelotas, canilleras, camperas">
-  <meta name="author" content="GOOL Cosquin">
+  <meta name="author" content="Escencia">
   <meta name="robots" content="index, follow">
 
-  <meta property="og:title" content="GOOL, tienda de indumentaria, calzado y accesorios deportivos.">
-  <meta property="og:description" content="Descubre GOOL, la tienda de indumentaria, calzado y accesorios deportivos. ¡Envío a todo el país!"">
+  <meta property="og:title" content="Escencia Tienda Oficial.">
+  <meta property="og:description" content="Descubre Escencia, Bolsos, Morchilas y Morrales ¡Envío a todo el país!"">
   <meta property="og:image" content="https://res.cloudinary.com/dh1qqui2h/image/upload/v1753118840/nuevo_banner_iglkub.png">
   <meta property="og:url" content="https://escencia.netlify.app/">
   <meta property="og:type" content="website">
