--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>GOOL Cosquin | Tienda Deportiva - Córdoba, Argentina</title>
+  <title>Escencia Tienda Oficial - Córdoba, Argentina</title>
   <meta name="description" content="Descubre Escencia, Bolsos, Morchilas y Morrales ¡Envío a todo el país!">
   <meta name="keywords" content="botines, camisetas, bolsos, mochilas, buzos, pelotas, canilleras, camperas">
   <meta name="author" content="Escencia">
@@ -16,7 +16,7 @@
   <meta property="og:type" content="website">
 
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="GOOL Tienda Oficial | Bolsos, Mochilas y Morrales">
+  <meta name="twitter:title" content="Escencia Tienda Oficial | Bolsos, Mochilas y Morrales">
   <meta name="twitter:description" content="Descubre Escencia, la tienda oficial de bolsos, mochilas y morrales de diseño en Córdoba, Argentina. Productos únicos con historia y propósito.">
   <meta name="twitter:image" content="https://res.cloudinary.com/dh1qqui2h/image/upload/v1753118840/nuevo_banner_iglkub.png">
 
