--- a/index.html
+++ b/index.html
@@ -715,8 +715,8 @@
 
 <section id="contacto">
   <h2>Contacto</h2>
-  <p>📱 WhatsApp: <a href="https://wa.me/5493541529201" target="_blank" rel="noopener noreferrer">Envíanos un WhatsApp: +5493541 707888</a></p>
-  <p>📧 Email: <span>goolcoquin@gmail.com</span></p>
+  <p>📱 WhatsApp: <a href="https://wa.me/5493541529201" target="_blank" rel="noopener noreferrer">Envíanos un WhatsApp: +5493541294944</a></p>
+  <p>📧 Email: <span>escenciaoficial@gmail.com</span></p>
   <p>📍 Cosquín, Córdoba, Argentina</p>
   <p>¡Contáctanos para tus consultas sobre nuestros productos!</p>
 </section>
@@ -799,7 +799,7 @@ sidebarLinks.forEach(link => {
       price: 19900,
       category: "bolsos",
       images: [
-        "https://res.cloudinary.com/dh1qqui2h/image/upload/v1753495175/PSX_20250725_221321_rtz0p5.jpg"
+        "https://res.cloudinary.com/dh1qqui2h/image/upload/v1754698221/file_00000000c18461f69a7562a9daf05292_rwhlxe.png"
       ],
       description: "Bolso deportivo Escencia, ideal para tu dia a dia, el fiel compañero para el club o para el gym"
     },
