--- a/index.html
+++ b/index.html
@@ -796,12 +796,12 @@ sidebarLinks.forEach(link => {
     {
       id: 1,
       name: "Bolso Escencia Deportivo",
-      price: 19900,
+      price: 30000,
       category: "bolsos",
       images: [
         "https://res.cloudinary.com/dh1qqui2h/image/upload/v1754698221/file_00000000c18461f69a7562a9daf05292_rwhlxe.png"
       ],
-      description: "Bolso deportivo Escencia, ideal para tu dia a dia, el fiel compañero para el club o para el gym"
+      description: "Bolso deportivo Escencia, ideal para tu dia a dia, el fiel compañero para el club o para el gym. Pensado para resistir, confeccionado en cordura importada, impermeable y resistente, cuenta con varios bolsillos para practicidad, y el detalle del bolsillo lateral para el calzado y la ropa sucia lo hace diferente"
     },
     {
       id: 2,
