--- a/index.html
+++ b/index.html
@@ -704,9 +704,9 @@
           <label for="mobileCategorySelect" style="display: none;">Selecciona una categoría:</label>
           <select id="mobileCategorySelect" onchange="filterProducts(this.value, this)">
               <option value="all">Todos los Productos</option>
-              <option value="camisetas">Bolsos</option>
-              <option value="Pantalones">Mochilas</option>
-              <option value="shorts">Morrales</option>
+              <option value="bolsos">Bolsos</option>
+              <option value="mochilas">Mochilas</option>
+              <option value="morrales">Morrales</option>
           </select>
       </div>
   </div>
